<resources>
    <string name="app_name">MuscleArt</string>
    <string name="app_in_name">MuscleArt</string>
    <string name="app_name_after">Register App</string>
    <string name="text_bottom">Войдите в свою учетную запись!</string>
    <string name="btnSignIn">Войти</string>
    <string name="btnRegister">Зарегистрироваться</string>

    <string name="map_in_name">Body Type</string>
    <string name="map_name_after">Заполните, чтобы определить тип вашего телосложения</string>
    <string name="btnNext">Продолжить</string>
    <string name="btnCancel">Назад</string>
    <string name="text_map_bottom">Перед продолжением заполните все поля!</string>
    <string name="height_string">Рост </string>
    <string name="weight_string">Вес </string>
    <string name="wrist_string">Обхват запястья </string>
    <string name="exp_string">Стаж тренировок </string>

    <string name="map_in_preview">Perfect Proportions</string>
    <string name="prop_name_after">Пожалуйста заполните ваши параметры</string>
    <string name="bodyNeck">Шея</string>
    <string name="bodyBiceps">Бицепс</string>
    <string name="bodyForearm">Предплечья</string>
    <string name="bodyChest">Грудь</string>
    <string name="bodyWaist">Талия</string>
    <string name="bodyBasin">Таз</string>
    <string name="bodyHips">Бедро</string>
    <string name="bodyShin">Голень</string>


    <string name="person_data">Личные данные</string>
    <string name="statistic">Статистика</string>
    <string name="plan">Составить пллан</string>
    <string name="prop">Рассчитать пропорции</string>
    <string name="аct1">Актуальные</string>
    <string name="аct2">Пропорции</string>
    <string name="аct3">Прогноз</string>
    <string name="size_hint">00.0 (см)</string>
    <string name="bd_type">Your Body Type</string>
    <string name="mbt">Тип телосложения</string>
    <string name="pro_n">Prognosis List</string>
    <string name="progn_after">Тренируйтесь и результат не заставит себя ждать!</string>
    <string name="help">помощь</string>
    <string name="todo">TODO</string>
    <string name="exit">Выйти</string>
    <string name="size_hint2">00.0</string>
    <string name="hint_exp">0 (лет)</string>
    <string name="size_hint3">00.0 (кг)</string>
    <string name="stat_in_name">Progress Statistic</string>
    <string name="stat_name_after">Оцените интересующие вас параметры</string>
    <string name="nxt_stat">Статистика</string>
    <string name="bodyNeckp">Шея:</string>
    <string name="bodyBicepsp">Бицепс:</string>
    <string name="bodyForearmp">Предплечье</string>
    <string name="bodyChestP">Грудь:</string>
    <string name="RecBtn">Рекомендация</string>
    <string name="AboutMez">Ваша ключевая особенность — любовь к спорту и атлетический тип фигуры от природы. </string>
    <string name="AboutMez1">Особенности обмена веществ мезоморфа — пониженная выработка кортизола и высокая способность организма усваивать белок. Мускулы быстрее восстанавливаются — что позволяет тренироваться чаще.</string>
    <string name="AboutMez2">В силу высокого уровня гормона роста и тестостерона мезоморфы плохо набирают жировую массу, поэтому до определенного возраста они могут позволить себе высококалорийное питание без ограничений. </string>
    <string name="Mez">You Are Mesomorph!</string>
    <string name="Ect">You Are Ectomorph!</string>
    <string name="End">You Are Endomorph!</string>
    <string name="SportM">Подходящие виды спорта: Циклические (бег, плавание), Сложнокоординационные (акробатика, единоборства) Силовые (Культуризм)</string>
    <string name="AboutEnd">Ваши особенности: Высокая скорость набора массы мышечных тканей.  Высокие силовые показатели. </string>
    <string name="AboutEndM">Минусом является то, что эндоморф быстро набирает много подкожного жира.</string>
    <string name="AboutEnd3">Лучшим способом достичь катаболического эффекта утилизации подкожного жира для эндоморфа является применение белковой диеты и силовых тренировок. </string>
    <string name="SportEnd">Подходящие виды спорта: Силовые (пауэрлифтинг, бодибилдинг, гиревой спорт), хоккей, бокс.
</string>
    <string name="AboutEct">Вышей ключевой особенностью является высокий метаболизм, который не дает вам возможности набрать большую мышечную массу.</string>
    <string name="AboutEct1">Чтобы набрать массу, нужно тренироваться не чаще трех раз в неделю. Коротко и интенсивно, с тяжелыми базовыми упражнениями, сплитами.</string>
    <string name="AboutEct2">Эктоморфу требуется повышенное содержание калорий. В дни без тренировок рекомендуется вести малоподвижный образ жизни.</string>
    <string name="SportEct">Подходят циклические виды спорта: гребля, конькобежный спорт, бег, плавание, велоспорт.</string>
    <string name="btnPrg">Прогноз</string>


</resources>