<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/theme"
    android:layout_height="match_parent"
    android:id="@+id/root_map"
    tools:context=".MapActivity">
  <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="5dp"
          android:fontFamily="@font/suez_one"
          android:text="@string/map_in_name"
          android:textAlignment="center"
          android:textColor="@color/white"
          android:textSize="35sp" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="15dp"
          android:layout_marginHorizontal="20dp"
          android:fontFamily="@font/montserrat"
          android:text="@string/map_name_after"
          android:textAlignment="center"
          android:textColor="@color/white"
          android:textSize="15sp" />
      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="5dp"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="15dp"
          android:layout_marginEnd="15dp"
          android:orientation="horizontal"
          >
          <TextView
              android:id="@+id/height"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:layout_marginBottom="10dp"
              android:layout_marginTop="10dp"
              android:layout_marginStart="15dp"
              android:layout_marginEnd="15dp"
              android:ems="10"
              android:textSize="16sp"
              android:hint="@string/height_string"
              android:textAlignment="center"
              android:textColor="@color/white"
              android:textColorHint="@color/text_bottom"
              />

          <EditText
              android:id="@+id/heightField"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="15dp"
              android:layout_marginEnd="15dp"
              android:ems="10"
              android:hint="@string/size_hint"
              android:inputType="numberDecimal"
              android:text=""
              android:textAlignment="center"
              android:textColor="@color/white"
              android:textColorHint="@color/browser_actions_title_color"
              android:textSize="16sp" />
      </LinearLayout>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="5dp"
          android:layout_marginTop="15dp"
          android:layout_marginBottom="15dp"
          android:layout_marginEnd="15dp"
          android:orientation="horizontal"
          >
          <TextView
              android:id="@+id/weight"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:layout_marginBottom="10dp"
              android:layout_marginTop="10dp"
              android:layout_marginStart="15dp"
              android:layout_marginEnd="15dp"
              android:ems="10"
              android:textSize="16sp"
              android:hint="@string/weight_string"
              android:textAlignment="center"
              android:textColor="@color/white"
              android:textColorHint="@color/text_bottom"
              />

          <EditText
              android:id="@+id/weightField"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="15dp"
              android:layout_marginEnd="15dp"
              android:ems="10"
              android:hint="@string/size_hint3"
              android:inputType="numberDecimal"
              android:text=""
              android:textAlignment="center"
              android:textColor="@color/white"
              android:textColorHint="@color/browser_actions_title_color"
              android:textSize="16sp" />
      </LinearLayout>
      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="5dp"
          android:layout_marginTop="15dp"
          android:layout_marginBottom="15dp"
          android:layout_marginEnd="15dp"
          android:orientation="horizontal"
          >
          <TextView
              android:id="@+id/wrist"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:layout_marginBottom="10dp"
              android:layout_marginTop="10dp"
              android:layout_marginStart="15dp"
              android:layout_marginEnd="15dp"
              android:ems="10"
              android:textSize="16sp"
              android:hint="@string/wrist_string"
              android:textAlignment="center"
              android:textColor="@color/white"
              android:textColorHint="@color/text_bottom"
              />

          <EditText
              android:id="@+id/wristField"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="15dp"
              android:layout_marginEnd="15dp"
              android:ems="10"
              android:hint="@string/size_hint"
              android:inputType="numberDecimal"
              android:text=""
              android:textAlignment="center"
              android:textColor="@color/white"
              android:textColorHint="@color/browser_actions_title_color"
              android:textSize="16sp" />
      </LinearLayout>
      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="5dp"
          android:layout_marginTop="15dp"
          android:layout_marginBottom="10dp"
          android:layout_marginEnd="15dp"
          android:orientation="horizontal"
          >
          <TextView
              android:id="@+id/exp"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:layout_marginBottom="10dp"
              android:layout_marginTop="10dp"
              android:layout_marginStart="15dp"
              android:layout_marginEnd="15dp"
              android:ems="10"
              android:textSize="16sp"
              android:hint="@string/exp_string"
              android:textAlignment="center"
              android:textColor="@color/white"
              android:textColorHint="@color/text_bottom"
              />

          <EditText
              android:id="@+id/expField"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="15dp"
              android:layout_marginEnd="15dp"
              android:ems="10"
              android:hint="@string/hint_exp"
              android:inputType="numberDecimal"
              android:text=""
              android:textAlignment="center"
              android:textColor="@color/white"
              android:textColorHint="@color/browser_actions_title_color"
              android:textSize="16sp" />
      </LinearLayout>


    </LinearLayout>
    <TextView
        android:id="@+id/text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/text_map_bottom"
        android:textColor="@color/text_bottom"
        android:textSize="15sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_above="@id/text_bottom"
        android:layout_margin="15dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sign_in"
            android:fontFamily="@font/montserrat"
            android:text="@string/exit"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:background="@drawable/btn_register"
            android:fontFamily="@font/montserrat"
            android:text="@string/btnNext"
            android:textColor="@color/white"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</RelativeLayout>
