<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/theme"
    android:layout_height="match_parent"
    android:id="@+id/root_prop"
    tools:context=".PropActivity">

    <LinearLayout
        android:id="@+id/prop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/suez_one"
            android:text="@string/map_in_preview"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/prop_name_after"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/neck"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:hint="@string/bodyNeck"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/text_bottom"
                />
            <EditText
                android:id="@+id/neckMy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:ems="10"
                android:text=""
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:hint="@string/size_hint"
                android:textColorHint="@color/browser_actions_title_color" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/biceps"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:hint="@string/bodyBiceps"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/text_bottom"
                />
            <EditText
                android:id="@+id/bicepsMy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:ems="10"
                android:text=""
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:hint="@string/size_hint"
                android:textColorHint="@color/browser_actions_title_color"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/forearm"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:hint="@string/bodyForearm"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/text_bottom" />
            <EditText
                android:id="@+id/forearmMy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:ems="10"
                android:text=""
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:hint="@string/size_hint"
                android:textColorHint="@color/browser_actions_title_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/chest"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:hint="@string/bodyChest"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/text_bottom" />
            <EditText
                android:id="@+id/chestMy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:ems="10"
                android:text=""
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:hint="@string/size_hint"
                android:textColorHint="@color/browser_actions_title_color" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/waist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:hint="@string/bodyWaist"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/text_bottom" />
            <EditText
                android:id="@+id/waistMy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:ems="10"
                android:text=""
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:hint="@string/size_hint"
                android:textColorHint="@color/browser_actions_title_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/basin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:hint="@string/bodyBasin"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/text_bottom" />
            <EditText
                android:id="@+id/basinMy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:ems="10"
                android:text=""
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:hint="@string/size_hint"
                android:textColorHint="@color/browser_actions_title_color" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/hips"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:hint="@string/bodyHips"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/text_bottom" />
            <EditText
                android:id="@+id/hipsMy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:ems="10"
                android:text=""
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:hint="@string/size_hint"
                android:textColorHint="@color/browser_actions_title_color" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/shin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:hint="@string/bodyShin"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/text_bottom" />
            <EditText
                android:id="@+id/shinMy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:ems="10"
                android:text=""
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:hint="@string/size_hint"
                android:textColorHint="@color/browser_actions_title_color" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btnHelp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@color/browser_actions_divider_color"
            android:fontFamily="@font/montserrat"
            android:text="@string/help"
            android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/text_map_bottom"
        android:textColor="@color/text_bottom"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="@+id/prop"
        android:layout_above="@id/text_bottom"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sign_in"
            android:fontFamily="@font/montserrat"
            android:text="@string/btnCancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnNext"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:background="@drawable/btn_register"
            android:fontFamily="@font/montserrat"
            android:text="@string/btnNext"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>
